# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.443 2005/12/09 16:13:56 rocket Exp $

  09 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Always clear autoresume points after a successful run

  09 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Changed mv -f in livecdfs-update.sh to a cp -r, as it was seriously breaking
  snapshot caching after a successful gentoo-release-livecd run.

  08 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Added famd to default on official LiveCD.

  08 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Fixes 'too many arguments' error in check_portage_version.

  08 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  remove extra self.env={} that was resetting the environment to null

  08 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage1_target.py:
  Fix appending livecd use flag if no use flag is specified in livecd-stage1
  spec file

  08 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/generic_target.py:
  Add a default path to the environment in the chroot

  08 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/embedded/embedded-chroot.sh,
  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  -targets/livecd-stage2/unmerge.sh, targets/netboot/netboot-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh, targets/stage4/stage4-chroot.sh,
  targets/stage4/stage4-controller.sh, -targets/stage4/unmerge.sh,
  targets/support/chroot-functions.sh, targets/support/pre-kmerge.sh,